fix  canvas z-index

--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -14,7 +14,7 @@ $orange:            #FB9C50;
 $slate:             #3D4260;
 $blue:              #2568A3;
 $catred:            #BF1827;
-$smain:             #00c3b6;
+$smain:             #404040;
 
 $grey-color-light:  #404040;
 $primary-color:     $smain;
